@@ -2,6 +2,11 @@
 VERSION 0.6.4cvs
 ================
 
+2005-04-09  Vincent Richard  <vincent@vincent-richard.net>
+
+ * encoderB64.cpp: fixed a bug in Base64 decoding. Bytes to be decoded
+   were not correctly initialized.
+
 2005-04-03  Vincent Richard  <vincent@vincent-richard.net>
 
  * messaging/*: moved IMAP, POP3, maildir and SMTP files to separate
